--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "tailwindcss": "^3.1.8"
     },
     "dependencies": {
-        "@lottiefiles/lottie-interactivity": "^1.6.1"
+        "@lottiefiles/lottie-interactivity": "^1.6.1",
+        "ethers": "^5.7.2",
+        "flowbite": "^1.5.3"
     }
 }
