--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=TraffiChain
 APP_ENV=local
 APP_KEY=base64:pO6nuhD+1rGu7+9rE6zJfsEbM7sYKFU73eZmDkeKHcE=
 APP_DEBUG=true
@@ -50,3 +50,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Wallet addresses
+DRIVER1=0xF5B9af3C85a317Bc28522a3DDEBf4c73a16996b8
+DRIVER2=0xA28a18B05b4b2b842a15275942834d5228626334
+POLICE1=0x81a741D43F8A8A0576dcAf254E271C09841D9bbA
+POLICE2=0xD340CeB30F633DfB88603Bab41F740B080B9fDc9
+JUDGE1=0x7296f61f990CbA99c3aeFbC5F38208F857830256
+SYSTEM=0x2702fA187b43A791BF7E208ed6C12e7301A36d8E
