--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@lottiefiles/lottie-interactivity": "^1.6.1",
+        "@openzeppelin/contracts": "^4.7.3",
         "ethers": "^5.7.2",
         "flowbite": "^1.5.3"
     }
