--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,5 +5,6 @@
     "/js/contractInfo.js": "/js/contractInfo.js",
     "/js/driverFactoryAddress.js": "/js/driverFactoryAddress.js",
     "/js/ticketFactoryAddress.js": "/js/ticketFactoryAddress.js",
+    "/js/InfractionsAddress.js": "/js/InfractionsAddress.js",
     "/css/app.css": "/css/app.css"
 }
