--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,5 +7,7 @@
     "/js/ticketFactoryAddress.js": "/js/ticketFactoryAddress.js",
     "/js/InfractionsAddress.js": "/js/InfractionsAddress.js",
     "/js/judgeFactoryAddress.js": "/js/judgeFactoryAddress.js",
+    "/js/policeFactoryAddress.js": "/js/policeFactoryAddress.js",
+    "/js/vehicleFactoryAddress.js": "/js/vehicleFactoryAddress.js",
     "/css/app.css": "/css/app.css"
 }
