--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "dependencies": {
         "@lottiefiles/lottie-interactivity": "^1.6.1",
         "@openzeppelin/contracts": "^4.7.3",
+        "@rainbow-me/rainbowkit": "^0.8.0",
         "ethers": "^5.7.2",
-        "flowbite": "^1.5.3"
+        "flowbite": "^1.5.3",
+        "wagmi": "^0.8.8"
     }
 }
