--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=TraffiChain
 APP_ENV=local
-APP_KEY=base64:pO6nuhD+1rGu7+9rE6zJfsEbM7sYKFU73eZmDkeKHcE=
+APP_KEY=base64:sxOsVO4vLsQPgFptGnOmfAUM9IXd22AeDn+45JEpvNQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -28,12 +28,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# MAIL_MAILER=smtp
+# MAIL_HOST=mailhog
+# MAIL_PORT=1025
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=593cd1132eef38
+MAIL_PASSWORD=bc2e5a20b3c1ea
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
